<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grayLighten"
    tools:context="com.totalmaster.csa.EvaluateCoWorkerActivity">

    <LinearLayout
        android:id="@+id/evaluate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/rateReliability"
                    android:layout_alignBottom="@+id/rateReliability"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:text="@string/reliability" />
                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/yellow"
                    android:text="0/100"/>
                <Button
                    android:id="@+id/rateReliability"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/evaluate"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/hardWorking"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/scoreHardWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/yellow"
                    android:text="0/100"/>
                <Button
                    android:id="@+id/rateHardWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/evaluate"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/technicalLevel"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/scoreTechnicalLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/yellow"
                    android:text="0/100"/>
                <Button
                    android:id="@+id/rateTechnicalLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/evaluate"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/leadership"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/scoreLeadership"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/yellow"
                    android:text="0/100"/>
                <Button
                    android:id="@+id/rateLeadership"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/evaluate"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="Comment..."
            android:gravity="top"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_box_shape"/>

        <Button
            android:id="@+id/donebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white"
            android:text="@string/done"
            android:textSize="@dimen/textSize_button"
            android:background="@drawable/mysubmitbutton" />

    </LinearLayout>


</ScrollView>
