<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="com.totalmaster.csa.EvaluationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayLighten"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border_shape">
                <TextView
                    android:id="@+id/reliability"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reliability"
                    android:textSize="@dimen/textSize"
                    android:layout_centerVertical="true"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/comment1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_comment"
                        android:clickable="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_toStartOf="@id/comment1"
                        android:layout_toLeftOf="@id/comment1"
                        android:paddingRight="60dp"
                        android:text="100/100"
                        android:textSize="@dimen/textSize"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border_shape">
                <TextView
                    android:id="@+id/hardworking"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hardWorking"
                    android:textSize="@dimen/textSize"
                    android:layout_centerVertical="true"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/comment2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_comment"
                        android:clickable="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_toStartOf="@id/comment2"
                        android:layout_toLeftOf="@id/comment2"
                        android:paddingRight="60dp"
                        android:text="100/100"
                        android:textSize="@dimen/textSize"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border_shape">
                <TextView
                    android:id="@+id/technicalLevel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/technicalLevel"
                    android:textSize="@dimen/textSize"
                    android:layout_centerVertical="true"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/comment3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_comment"
                        android:clickable="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_toStartOf="@id/comment3"
                        android:layout_toLeftOf="@id/comment3"
                        android:paddingRight="60dp"
                        android:text="100/100"
                        android:textSize="@dimen/textSize"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:background="@drawable/border_shape">
                <TextView
                    android:id="@+id/leadership"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/leadership"
                    android:textSize="@dimen/textSize"
                    android:layout_centerVertical="true"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/comment4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_comment"
                        android:clickable="true"/>
                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentEnd="true"-->
                        <!--android:layout_toStartOf="@id/comment4"-->
                        <!--android:layout_toLeftOf="@id/comment4"-->
                        <!--android:paddingRight="60dp"-->
                        <!--android:text="100/100"-->
                        <!--android:textSize="@dimen/textSize"/>-->
                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="40dp"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_gravity="center_horizontal"
                        android:stepSize="1"
                        android:progressTint="@color/yellow"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray" />
            <View
                android:layout_marginTop="2dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evaluation"
                android:textSize="18dp"
                android:textAlignment="center"
                android:paddingTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_star"-->
                <!--android:layout_margin="5dp"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_star"-->
                <!--android:layout_margin="5dp"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_star"-->
                <!--android:layout_margin="5dp"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_star"-->
                <!--android:layout_margin="5dp"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_star"-->
                <!--android:layout_margin="5dp"/>-->
            <RatingBar
                android:id="@+id/overallRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"
                android:progressTint="@color/yellow"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="74.15%"
                android:textSize="25dp"
                android:paddingLeft="50dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <View
                    android:layout_width="1dp"
                    android:layout_height="33dp"
                    android:background="@color/lightGray" />
            </LinearLayout>

            <TextView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200/400"
                android:textSize="25dp"
                android:paddingRight="50dp"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
